--- a/_posts/2023-02-20-mermaid.md
+++ b/_posts/2023-02-20-mermaid.md
@@ -1,35 +1,27 @@
 ---
 title: 如何使用Mermaid
 key: 20170606
-tags: TeXt
+tags: 插件
 mermaid: true
+sidebar:
+  nav: docs-zh
 ---
-
-```mermaid
-graph TB;
-    A[Do you have a problem in your life?]
-    B[Then don't worry]
-    C[Can you do something about it?]
-    A--no-->B;
-    A--yes-->C;
-    C--no-->B;
-    C--yes-->B;
-```
+[Mermaid](https://mermaidjs.github.io/) 是一种简单的类似markdown的脚本语言，可以通过使用javascript从文本中生成图表和流程图。
 
 <!--more-->
 
-You need set `mermaid: true` in the *_config.yml* or the markdown’s front matter to **enable** it.
+你需要在 *_config.yml* 或 YAML 头信息中设置相关的属性为 `true` 来开启对应的功能。
 {:.warning}
 
-[Documentation](https://kitian616.github.io/jekyll-TeXt-theme/docs/en/markdown-enhancements#mermaid)
+[Mermaid](https://mermaid.js.org) 支持以下三种示意图:
 
-Generation of diagrams and flowcharts from text in a similar manner as markdown.
+- [Flowchart](https://mermaid.js.org/syntax/flowchart.html)
 
-Ever wanted to simplify documentation and avoid heavy tools like Visio when explaining your code?
+- [Sequence Diagram](https://mermaid.js.org/syntax/sequenceDiagram.html)
 
-This is why [mermaid](https://mermaidjs.github.io/) was born, a simple markdown-like script language for generating charts from text via javascript.
+- [Gant Diagram](https://mermaid.js.org/syntax/gantt.html)
 
-## Flowchart
+## 流程图 Flowchart
 
 ```mermaid
 graph TD;
@@ -49,7 +41,7 @@ graph TD;
         C-->D;
     ```
 
-## Sequence Diagram
+## 时序图 Sequence Diagram
 
 ```mermaid
 sequenceDiagram
@@ -81,7 +73,7 @@ sequenceDiagram
         Bob-->John: Jolly good!
     ```
 
-## Gant Diagrams
+## 甘特图 Gant Diagrams
 
 ```mermaid
 gantt
