--- a/_posts/2023-02-20-chart.md
+++ b/_posts/2023-02-20-chart.md
@@ -1,66 +1,34 @@
 ---
 title: 如何使用Chart
 key: 20170505
-tags: TeXt
+tags: 插件
 chart: true
+sidebar:
+  nav: docs-zh
 ---
 
-```chart
-{
-  "type": "line",
-  "data": {
-    "labels": [
-      "January",
-      "February",
-      "March",
-      "April",
-      "May",
-      "June",
-      "July"
-    ],
-    "datasets": [
-      {
-        "label": "# of bugs",
-        "fill": false,
-        "lineTension": 0.1,
-        "backgroundColor": "rgba(75,192,192,0.4)",
-        "borderColor": "rgba(75,192,192,1)",
-        "borderCapStyle": "butt",
-        "borderDash": [],
-        "borderDashOffset": 0,
-        "borderJoinStyle": "miter",
-        "pointBorderColor": "rgba(75,192,192,1)",
-        "pointBackgroundColor": "#fff",
-        "pointBorderWidth": 1,
-        "pointHoverRadius": 5,
-        "pointHoverBackgroundColor": "rgba(75,192,192,1)",
-        "pointHoverBorderColor": "rgba(220,220,220,1)",
-        "pointHoverBorderWidth": 2,
-        "pointRadius": 1,
-        "pointHitRadius": 10,
-        "data": [
-          65,
-          59,
-          80,
-          81,
-          56,
-          55,
-          40
-        ],
-        "spanGaps": false
-      }
-    ]
-  },
-  "options": {}
-}
-```
+Chart可以帮助你生成可交互的图表
 
 <!--more-->
 
-You need set `chart: true` in the *_config.yml* or the markdown’s front matter to **enable** it.
+你需要在 *_config.yml* 或 YAML 头信息中设置相关的属性为 `true` 来开启对应的功能。
 {:.warning}
 
-[Documentation](https://kitian616.github.io/jekyll-TeXt-theme/docs/en/markdown-enhancements#chart)
+[Chart.js](http://www.chartjs.org/docs/latest/) 支持以下 7 种图表:
+
+- [Line Chart](http://www.chartjs.org/docs/latest/charts/line.html)
+
+- [Bar Chart](http://www.chartjs.org/docs/latest/charts/bar.html)
+
+- [Radar Chart](http://www.chartjs.org/docs/latest/charts/radar.html)
+
+- [Polar Area Chart](http://www.chartjs.org/latest/charts/polar.html)
+
+- [Pie Chart](http://www.chartjs.org/docs/latest/charts/doughnut.html)
+
+- [Doughnut Chart](http://www.chartjs.org/docs/latest/charts/doughnut.html)
+
+- [Bubble Chart](http://www.chartjs.org/docs/latest/charts/bubble.html)
 
 ## Line Chart
 
